<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/container_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:background="#082C59"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_first_air"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Air Date: "
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/tv_first_air_date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text=" yyyy-mm-dd"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/label_last_air"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_air"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/tv_last_air_date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text=" yyyy-mm-dd"
                android:textColor="@color/white"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_season"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Season: "
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/tv_season"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:text=" 00"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/label_episode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episode"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/tv_episode"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text=" 00"
                android:textColor="@color/white"/>


        </LinearLayout>


        <TextView

            android:id="@+id/label_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"/>

        <TextView

        android:id="@+id/label_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingHorizontal="10dp"
       />









    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>