<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#082C59"
    tools:context=".ui.activities.DetailActivity"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:background="@drawable/fg_backdrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>




            <androidx.cardview.widget.CardView
                android:id="@+id/iv_poster_container"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_marginTop="100dp"
                app:cardCornerRadius="17dp"
                android:elevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_poster_detail"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:fontFamily="@font/signika_negative_bold"
                android:gravity="center_horizontal"
                android:paddingHorizontal="10dp"
                android:text="TITLE"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:maxLines="1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_poster_container" />

            <LinearLayout
                android:id="@+id/rate_container"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:elevation="2dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_details">

                <RatingBar
                    android:id="@+id/rb_rating_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:theme="@style/RatingBar"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:isIndicator="true"
                    android:layout_marginVertical="7dp"
                    android:layout_marginTop="2dp"/>
            </LinearLayout>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/rate_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:translationY="-20dp"
                android:paddingLeft="16dp"
                android:clipToPadding = "false"
                tools:listitem="@layout/genre_list"
                />


            <LinearLayout
                android:id="@+id/container_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_genre"
                android:background="#082C59"
                android:layout_marginHorizontal="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_first_air"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="First Air Date: "
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        />

                    <TextView
                        android:id="@+id/tv_first_air_date"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text=" yyyy-mm-dd"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/label_last_air"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_air"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        />

                    <TextView
                        android:id="@+id/tv_last_air_date"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text=" yyyy-mm-dd"
                        android:textColor="@color/white"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_season"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Season: "
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        />

                    <TextView
                        android:id="@+id/tv_season"
                        android:layout_width="137dp"
                        android:layout_height="wrap_content"
                        android:text=" 00"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/label_episode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/episode"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        />

                    <TextView
                        android:id="@+id/tv_episode"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text=" 00"
                        android:textColor="@color/white"/>


                </LinearLayout>


                <TextView

                    android:id="@+id/label_cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cast"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="3dp"/>

                <TextView

                    android:id="@+id/label_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:paddingHorizontal="10dp"
                    android:padding="5dp"
                    />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="16dp"/>

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="5dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toTopOf="@id/rv_watch_trailer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_details">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/asap_medium"
                        android:justificationMode="inter_word"
                        android:background="@drawable/bg_overview"
                        android:padding="5dp"
                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula arcu quis pharetra aliquet. Sed lobortis sapien sed neque feugiat, nec mollis dui ultrices. Proin sagittis interdum facilisis. Duis quis rhoncus nisl. Nullam pharetra dolor quis est feugiat, consectetur hendrerit sapien sollicitudin. Mauris dictum, augue vel commodo fermentum, elit nisi pharetra diam, a mollis nibh magna in est. Vivamus in lectus ligula. Curabitur eu est tincidunt, rhoncus tellus quis, egestas neque.

Nulla et euismod justo, fermentum sagittis libero. Suspendisse condimentum nisl urna, eu gravida tortor pharetra vulputate. Morbi eget turpis et velit fringilla tristique sit amet nec justo. Donec commodo lorem augue, quis vestibulum risus viverra in. Sed at eros sapien. Mauris pellentesque felis sed efficitur luctus. Etiam erat justo, sagittis ac enim id, ultrices laoreet quam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos."
                        android:textColor="@color/white"
                         />
                </LinearLayout>
            </ScrollView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rv_watch_trailer"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:iconGravity="textStart"
                android:textStyle="bold"
                app:icon="@drawable/ic_baseline_watch_24"
                android:text="@string/trailer"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="30dp"
                android:backgroundTint="#a7c43f"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/asap_medium"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>